fix: fixed table header On Ie scrollbar

--- a/assets/index.less
+++ b/assets/index.less
@@ -45,6 +45,10 @@
     box-sizing: border-box;
   }
 
+  &-fixed-header &-scroll &-hide-scrollbar{
+    overflow: hidden;
+  }
+  
   &-hide-scrollbar {
     scrollbar-color: transparent transparent;
     &::-webkit-scrollbar {
